cmake_minimum_required(VERSION 3.17)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)

SET(CMAKE_SWIG_FLAGS "")

INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS} ${JANSSON_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(gamerzilla.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(gamerzilla python gamerzilla.i)
SWIG_LINK_LIBRARIES(gamerzilla ${PYTHON_LIBRARIES} -lgamerzilla)
