cmake_minimum_required(VERSION 3.17)
project (pylibgamerzilla)


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(GAMERZILLA REQUIRED gamerzilla)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${GAMERZILLA_INCLUDE_DIRS})

SET(CMAKE_SWIG_FLAGS "")

INCLUDE_DIRECTORIES(${GAMERZILLA_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(gamerzilla.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(gamerzilla python gamerzilla.i)
SWIG_LINK_LIBRARIES(gamerzilla ${PYTHON_LIBRARIES} -lgamerzilla)
